transpose the data and finished a dict of corr code

--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -906,7 +906,7 @@
     "\n",
     "permits_by_zip = pd.pivot_table(permit_counts, index = \"date\", values = \"count\", columns = \"zip_code\")\n",
     "\n",
-    "permits_by_zip.index = permits_by_zip.index.to_period('M')\n",
+    "# permits_by_zip.index = permits_by_zip.index.to_period('M')\n",
     "\n",
     "permits_by_zip = permits_by_zip.groupby(permits_by_zip.index).sum()\n",
     "\n",
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,33 +993,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_median_list_sqft_df = pd.DataFrame()\n",
     "filtered_median_list_sqft_df = filter_zip_code(zip_code, median_list_sqft_df, filtered_median_list_sqft_df)\n",
     "filtered_median_list_sqft_df.fillna(0, inplace = True)\n",
+    "filtered_median_list_sqft_df = filtered_median_list_sqft_df.transpose()\n",
     "\n",
     "filtered_median_list_sqft_df_pct_change = pd.DataFrame()\n",
     "filtered_median_list_sqft_df_pct_change = filter_zip_code(zip_code, median_list_sqft_df_pct_change, filtered_median_list_sqft_df_pct_change)\n",
     "filtered_median_list_sqft_df_pct_change.fillna(0, inplace = True)\n",
+    "filtered_median_list_sqft_df_pct_change = filtered_median_list_sqft_df_pct_change.transpose()\n",
     "\n",
     "filtered_active_listings_df = pd.DataFrame()\n",
     "filtered_active_listings_df = filter_zip_code(zip_code, active_listings_df, filtered_active_listings_df)\n",
     "filtered_active_listings_df.fillna(0, inplace = True)\n",
+    "filtered_active_listings_df = filtered_active_listings_df.transpose()\n",
     "\n",
     "filtered_new_listing_df = pd.DataFrame()\n",
     "filtered_new_listing_df = filter_zip_code(zip_code, new_listing_df, filtered_new_listing_df)\n",
     "filtered_new_listing_df.fillna(0, inplace = True)\n",
+    "filtered_new_listing_df = filtered_new_listing_df.transpose()\n",
     "\n",
     "filtered_average_listing_price_df = pd.DataFrame()\n",
     "filtered_average_listing_price_df = filter_zip_code(zip_code, average_listing_price_df, filtered_average_listing_price_df)\n",
     "filtered_average_listing_price_df.fillna(0, inplace = True)\n",
+    "filtered_average_listing_price_df = filtered_average_listing_price_df.transpose()\n",
     "\n",
     "filtered_pending_ratio_df = pd.DataFrame()\n",
     "filtered_pending_ratio_df = filter_zip_code(zip_code, pending_ratio_df, filtered_pending_ratio_df)\n",
-    "filtered_pending_ratio_df.fillna(0, inplace = True)\n"
+    "filtered_pending_ratio_df.fillna(0, inplace = True)\n",
+    "filtered_pending_ratio_df = filtered_pending_ratio_df.transpose()\n"
    ]
   },
   {
@@ -1038,13 +1044,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_permits_by_zip = pd.DataFrame()\n",
     "filtered_permits_by_zip = filter_zip_code(zip_code, permits_by_zip, filtered_permits_by_zip)\n",
-    "filtered_permits_by_zip.fillna(0, inplace = True)"
+    "filtered_permits_by_zip.fillna(0, inplace = True)\n",
+    "filtered_number_of_returns_df = filtered_number_of_returns_df.transpose()\n"
    ]
   },
   {
@@ -1063,33 +1070,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_number_of_returns_df = pd.DataFrame()\n",
     "filtered_number_of_returns_df = filter_zip_code(zip_code, number_of_returns_df, filtered_number_of_returns_df)\n",
     "filtered_number_of_returns_df.fillna(0, inplace = True)\n",
+    "filtered_number_of_returns_df = filtered_number_of_returns_df.transpose()\n",
     "\n",
     "filtered_taxable_income_df = pd.DataFrame()\n",
     "filtered_taxable_income_df = filter_zip_code(zip_code, taxable_income_df, filtered_taxable_income_df)\n",
     "filtered_taxable_income_df.fillna(0, inplace = True)\n",
+    "filtered_taxable_income_df = filtered_taxable_income_df.transpose()\n",
     "\n",
     "filtered_income_tax_df = pd.DataFrame()\n",
     "filtered_income_tax_df = filter_zip_code(zip_code, income_tax_df, filtered_income_tax_df)\n",
     "filtered_income_tax_df.fillna(0, inplace = True)\n",
+    "filtered_income_tax_df = filtered_income_tax_df.transpose()\n",
     "\n",
     "filtered_mortgage_tax_df = pd.DataFrame()\n",
     "filtered_mortgage_tax_df = filter_zip_code(zip_code, mortgage_tax_df, filtered_mortgage_tax_df)\n",
     "filtered_mortgage_tax_df.fillna(0, inplace = True)\n",
+    "filtered_mortgage_tax_df = filtered_mortgage_tax_df.transpose()\n",
     "\n",
     "filtered_charity_tax_df = pd.DataFrame()\n",
     "filtered_charity_tax_df = filter_zip_code(zip_code, charity_tax_df, filtered_charity_tax_df)\n",
     "filtered_charity_tax_df.fillna(0, inplace = True)\n",
+    "filtered_charity_tax_df = filtered_charity_tax_df.transpose()\n",
     "\n",
     "filtered_real_estates_tax_df = pd.DataFrame()\n",
     "filtered_real_estates_tax_df = filter_zip_code(zip_code, real_estates_tax_df, filtered_real_estates_tax_df)\n",
     "filtered_real_estates_tax_df.fillna(0, inplace = True)\n",
+    "filtered_real_estates_tax_df = filtered_real_estates_tax_df.transpose()\n",
     "\n"
    ]
   },
