added the analysis piece to the copy_code_vu

--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -1121,11 +1121,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Hypothosis"
+   ]
   },
   {
    "cell_type": "code",
@@ -1142,25 +1142,78 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analysis"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# correlation calculation\n",
+    "dict_of_corr = {}\n",
+    "\n",
+    "for i in zip_code:\n",
+    "    if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
+    "        dict_of_corr[i] = pd.DataFrame({\n",
+    "            'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
+    "            'Median Listing of Sqft Pct Change' : filtered_median_list_sqft_df_pct_change[i], \n",
+    "            'Active Listings' : filtered_active_listings_df[i], \n",
+    "            'New Listings' : filtered_new_listing_df[i], \n",
+    "            'Average Listing Price' : filtered_average_listing_price_df[i],\n",
+    "            'Pending Ratio' : filtered_pending_ratio_df[i],\n",
+    "            'Number of Permits' : filtered_permits_by_zip[i],\n",
+    "            'Number of Tax Returns' : filtered_number_of_returns_df[i],\n",
+    "            'Average Taxable Income' : filtered_taxable_income_df[i],\n",
+    "            'Average Income Tax' : filtered_income_tax_df[i],\n",
+    "            'Average Mortgage Tax' : filtered_mortgage_tax_df[i],\n",
+    "            'Average Charity Tax' : filtered_charity_tax_df[i],\n",
+    "            'Average Real Estates Tax' : filtered_real_estates_tax_df[i]\n",
+    "            }).corr()\n",
+    "        np.fill_diagonal(dict_of_corr[i].values, -2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# tells you which value has the highest correlation to x\n",
+    "dict_of_frames = {}\n",
+    "lr = LinearRegression()\n",
+    "\n",
+    "for i in dict_of_corr.keys():\n",
+    "    if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
+    "        dict_of_frames[i] = pd.DataFrame({\n",
+    "            'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
+    "            'Median Listing of Sqft Pct Change' : filtered_median_list_sqft_df_pct_change[i], \n",
+    "            'Active Listings' : filtered_active_listings_df[i], \n",
+    "            'New Listings' : filtered_new_listing_df[i], \n",
+    "            'Average Listing Price' : filtered_average_listing_price_df[i],\n",
+    "            'Pending Ratio' : filtered_pending_ratio_df[i],\n",
+    "            'Number of Permits' : filtered_permits_by_zip[i],\n",
+    "            'Number of Tax Returns' : filtered_number_of_returns_df[i],\n",
+    "            'Average Taxable Income' : filtered_taxable_income_df[i],\n",
+    "            'Average Income Tax' : filtered_income_tax_df[i],\n",
+    "            'Average Mortgage Tax' : filtered_mortgage_tax_df[i],\n",
+    "            'Average Charity Tax' : filtered_charity_tax_df[i],\n",
+    "            'Average Real Estates Tax' : filtered_real_estates_tax_df[i]\n",
+    "            })\n",
+    "    dict_of_frames[i].dropna(inplace=True)\n",
+    "    max_df = dict_of_corr[i].agg({'Median Listing of Sqft Pct Change' : ['max']})\n",
+    "    if max_df.values[0][0] == -2:\n",
+    "        print(f\"Data Set Incomplete: Removing {[i]}\")\n",
+    "        #del dict_of_frames[i]\n",
+    "    else:\n",
+    "        strong_corr = dict_of_corr[i].index[dict_of_corr[i]['Median Listing of Sqft Pct Change'] == max_df.values[0][0]].tolist()\n",
+    "        print(f\"{strong_corr[0]} {[i]}\")\n",
+    "        lr.fit(dict_of_frames[i][[strong_corr[0]]], dict_of_frames[i]['Median Listing of Sqft Pct Change'])"
+   ]
   },
   {
    "cell_type": "code",
