fixed a spelling error

--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -1051,7 +1051,7 @@
     "filtered_permits_by_zip = pd.DataFrame()\n",
     "filtered_permits_by_zip = filter_zip_code(zip_code, permits_by_zip, filtered_permits_by_zip)\n",
     "filtered_permits_by_zip.fillna(0, inplace = True)\n",
-    "filtered_number_of_returns_df = filtered_number_of_returns_df.transpose()\n"
+    "filtered_permits_by_zip = filtered_permits_by_zip.transpose()\n"
    ]
   },
   {
