had to reset index

--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Bad key \"text.kerning_factor\" on line 4 in\n",
+      "C:\\Users\\dovu9\\anaconda3\\envs\\pyvizenv\\lib\\site-packages\\matplotlib\\mpl-data\\stylelib\\_classic_test_patch.mplstyle.\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "http://github.com/matplotlib/matplotlib/blob/master/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
@@ -19,7 +32,13 @@
     "import json\n",
     "import pandas as pd\n",
     "import datetime as dt\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -31,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +59,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -733,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -778,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -884,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -931,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1001,6 +1020,7 @@
     "filtered_median_list_sqft_df = filter_zip_code(zip_code, median_list_sqft_df, filtered_median_list_sqft_df)\n",
     "filtered_median_list_sqft_df.fillna(0, inplace = True)\n",
     "filtered_median_list_sqft_df = filtered_median_list_sqft_df.transpose()\n",
+    "\n",
     "\n",
     "filtered_median_list_sqft_df_pct_change = pd.DataFrame()\n",
     "filtered_median_list_sqft_df_pct_change = filter_zip_code(zip_code, median_list_sqft_df_pct_change, filtered_median_list_sqft_df_pct_change)\n",
@@ -1044,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1170,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# resetting all indexes \n",
+    "\n",
+    "# tax data\n",
+    "filtered_real_estates_tax_df.reset_index(inplace = True)\n",
+    "filtered_charity_tax_df.reset_index(inplace = True)\n",
+    "filtered_mortgage_tax_df.reset_index(inplace = True)\n",
+    "filtered_income_tax_df.reset_index(inplace = True)\n",
+    "filtered_taxable_income_df.reset_index(inplace = True)\n",
+    "filtered_number_of_returns_df.reset_index(inplace = True)\n",
+    "\n",
+    "# housing data\n",
+    "filtered_pending_ratio_df.reset_index(inplace = True)\n",
+    "filtered_average_listing_price_df.reset_index(inplace = True)\n",
+    "filtered_new_listing_df.reset_index(inplace = True)\n",
+    "filtered_active_listings_df.reset_index(inplace = True)\n",
+    "filtered_median_list_sqft_df_pct_change.reset_index(inplace = True)\n",
+    "filtered_median_list_sqft_df.reset_index(inplace = True)\n",
+    "\n",
+    "# permit data\n",
+    "filtered_permits_by_zip.reset_index(inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,9 +1227,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median Listing Sqft [77021]\n",
+      "Pending Ratio [77030]\n",
+      "Median Listing Sqft [77005]\n",
+      "Median Listing Sqft [77023]\n",
+      "Median Listing Sqft [77004]\n",
+      "Average Mortgage Tax [77046]\n",
+      "Median Listing Sqft [77098]\n",
+      "Average Charity Tax [77027]\n",
+      "Median Listing Sqft [77006]\n",
+      "Median Listing Sqft [77011]\n",
+      "New Listings [77003]\n",
+      "Median Listing Sqft [77019]\n",
+      "Median Listing Sqft [77002]\n",
+      "Median Listing Sqft [77007]\n",
+      "Average Listing Price [77020]\n",
+      "Average Listing Price [77009]\n",
+      "Average Listing Price [77008]\n",
+      "Pending Ratio [77026]\n"
+     ]
+    }
+   ],
    "source": [
     "# tells you which value has the highest correlation to x\n",
     "dict_of_frames = {}\n",
