updated the questions with some presentation ideas

--- a/Notebooks/Copy_Code_Vu.ipynb
+++ b/Notebooks/Copy_Code_Vu.ipynb
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1208,7 @@
     "for i in zip_code:\n",
     "    if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
     "        dict_of_corr[i] = pd.DataFrame({\n",
-    "            'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
+    "#             'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
     "            'Median Listing of Sqft Pct Change' : filtered_median_list_sqft_df_pct_change[i], \n",
     "            'Active Listings' : filtered_active_listings_df[i], \n",
     "            'New Listings' : filtered_new_listing_df[i], \n",
@@ -1227,27 +1227,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([77021, 77030, 77005, 77023, 77004, 77046, 77098, 77027, 77006, 77011, 77003, 77019, 77002, 77007, 77020, 77009, 77008, 77026])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_of_corr.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Median Listing Sqft [77021]\n",
+      "Pending Ratio [77021]\n",
       "Pending Ratio [77030]\n",
-      "Median Listing Sqft [77005]\n",
-      "Median Listing Sqft [77023]\n",
-      "Median Listing Sqft [77004]\n",
+      "Average Income Tax [77005]\n",
+      "Average Listing Price [77023]\n",
+      "New Listings [77004]\n",
       "Average Mortgage Tax [77046]\n",
-      "Median Listing Sqft [77098]\n",
+      "Average Listing Price [77098]\n",
       "Average Charity Tax [77027]\n",
-      "Median Listing Sqft [77006]\n",
-      "Median Listing Sqft [77011]\n",
+      "Number of Permits [77006]\n",
+      "Average Listing Price [77011]\n",
       "New Listings [77003]\n",
-      "Median Listing Sqft [77019]\n",
-      "Median Listing Sqft [77002]\n",
-      "Median Listing Sqft [77007]\n",
+      "Pending Ratio [77019]\n",
+      "Average Charity Tax [77002]\n",
+      "Average Listing Price [77007]\n",
       "Average Listing Price [77020]\n",
       "Average Listing Price [77009]\n",
       "Average Listing Price [77008]\n",
@@ -1263,7 +1283,7 @@
     "for i in dict_of_corr.keys():\n",
     "    if i in filtered_median_list_sqft_df and i in filtered_median_list_sqft_df_pct_change and i in filtered_active_listings_df and i in filtered_new_listing_df and i in filtered_average_listing_price_df and i in filtered_pending_ratio_df and i in filtered_permits_by_zip and i in filtered_number_of_returns_df and i in filtered_taxable_income_df and i in filtered_income_tax_df and i in filtered_mortgage_tax_df and i in filtered_charity_tax_df and i in filtered_real_estates_tax_df:\n",
     "        dict_of_frames[i] = pd.DataFrame({\n",
-    "            'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
+    "#             'Median Listing Sqft' : filtered_median_list_sqft_df[i],\n",
     "            'Median Listing of Sqft Pct Change' : filtered_median_list_sqft_df_pct_change[i], \n",
     "            'Active Listings' : filtered_active_listings_df[i], \n",
     "            'New Listings' : filtered_new_listing_df[i], \n",
