--- a/Notebooks/trail&error2_Vu.ipynb
+++ b/Notebooks/trail&error2_Vu.ipynb
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 156,
    "metadata": {
     "scrolled": true
    },
@@ -927,6 +927,235 @@
     "average_listing_price_df = pd.pivot_table(pricing_data_df, index='date', columns = 'postal_code', values = 'average_listing_price')\n",
     "\n",
     "pending_ratio_df = pd.pivot_table(pricing_data_df, index='date', columns = 'postal_code', values = 'pending_ratio')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>month_date_yyyymm</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>zip_name</th>\n",
+       "      <th>median_listing_price</th>\n",
+       "      <th>active_listing_count</th>\n",
+       "      <th>median_days_on_market</th>\n",
+       "      <th>new_listing_count</th>\n",
+       "      <th>price_increased_count</th>\n",
+       "      <th>price_reduced_count</th>\n",
+       "      <th>pending_listing_count</th>\n",
+       "      <th>median_listing_price_per_square_feet</th>\n",
+       "      <th>median_square_feet</th>\n",
+       "      <th>average_listing_price</th>\n",
+       "      <th>total_listing_count</th>\n",
+       "      <th>pending_ratio</th>\n",
+       "      <th>pct_price_change</th>\n",
+       "      <th>pct_price_sqft_change</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020-02-01</th>\n",
+       "      <td>202002</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>yoakum, tx</td>\n",
+       "      <td>209850.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>100.147275</td>\n",
+       "      <td>2103.0</td>\n",
+       "      <td>342624</td>\n",
+       "      <td>38</td>\n",
+       "      <td>0.3103</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.033128</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-03-01</th>\n",
+       "      <td>202003</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>yoakum, tx</td>\n",
+       "      <td>202400.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>91.252346</td>\n",
+       "      <td>2050.0</td>\n",
+       "      <td>326075</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0.3793</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.088818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-04-01</th>\n",
+       "      <td>202004</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>yoakum, tx</td>\n",
+       "      <td>194500.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>99.498926</td>\n",
+       "      <td>1917.0</td>\n",
+       "      <td>295784</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.1290</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.090371</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-05-01</th>\n",
+       "      <td>202005</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>yoakum, tx</td>\n",
+       "      <td>198550.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>100.147275</td>\n",
+       "      <td>2103.0</td>\n",
+       "      <td>328709</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.2581</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.006516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020-06-01</th>\n",
+       "      <td>202006</td>\n",
+       "      <td>77995</td>\n",
+       "      <td>yoakum, tx</td>\n",
+       "      <td>219550.0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>99.5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>98.611774</td>\n",
+       "      <td>2103.5</td>\n",
+       "      <td>359262</td>\n",
+       "      <td>39</td>\n",
+       "      <td>0.4444</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.015332</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            month_date_yyyymm  postal_code    zip_name  median_listing_price  \\\n",
+       "date                                                                           \n",
+       "2020-02-01             202002        77995  yoakum, tx              209850.0   \n",
+       "2020-03-01             202003        77995  yoakum, tx              202400.0   \n",
+       "2020-04-01             202004        77995  yoakum, tx              194500.0   \n",
+       "2020-05-01             202005        77995  yoakum, tx              198550.0   \n",
+       "2020-06-01             202006        77995  yoakum, tx              219550.0   \n",
+       "\n",
+       "            active_listing_count  median_days_on_market  new_listing_count  \\\n",
+       "date                                                                         \n",
+       "2020-02-01                    29                  133.0                  8   \n",
+       "2020-03-01                    29                  142.0                  0   \n",
+       "2020-04-01                    31                  105.0                  8   \n",
+       "2020-05-01                    31                  120.0                  4   \n",
+       "2020-06-01                    27                   99.5                  4   \n",
+       "\n",
+       "            price_increased_count  price_reduced_count  pending_listing_count  \\\n",
+       "date                                                                            \n",
+       "2020-02-01                      0                    4                      9   \n",
+       "2020-03-01                      0                    0                     11   \n",
+       "2020-04-01                      0                    0                      4   \n",
+       "2020-05-01                      0                    8                      8   \n",
+       "2020-06-01                      0                    0                     12   \n",
+       "\n",
+       "            median_listing_price_per_square_feet  median_square_feet  \\\n",
+       "date                                                                   \n",
+       "2020-02-01                            100.147275              2103.0   \n",
+       "2020-03-01                             91.252346              2050.0   \n",
+       "2020-04-01                             99.498926              1917.0   \n",
+       "2020-05-01                            100.147275              2103.0   \n",
+       "2020-06-01                             98.611774              2103.5   \n",
+       "\n",
+       "            average_listing_price  total_listing_count  pending_ratio  \\\n",
+       "date                                                                    \n",
+       "2020-02-01                 342624                   38         0.3103   \n",
+       "2020-03-01                 326075                   40         0.3793   \n",
+       "2020-04-01                 295784                   35         0.1290   \n",
+       "2020-05-01                 328709                   39         0.2581   \n",
+       "2020-06-01                 359262                   39         0.4444   \n",
+       "\n",
+       "            pct_price_change  pct_price_sqft_change  \n",
+       "date                                                 \n",
+       "2020-02-01                 0               0.033128  \n",
+       "2020-03-01                 0              -0.088818  \n",
+       "2020-04-01                 0               0.090371  \n",
+       "2020-05-01                 0               0.006516  \n",
+       "2020-06-01                 0              -0.015332  "
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pricing_data_df.tail()"
    ]
   },
   {
